--- a/style.scss
+++ b/style.scss
@@ -167,7 +167,7 @@ html{
     position: fixed;
     background-color: #0a0b0f;
     width: 400px;
-    height: 1000px;
+    height: 100%;
     animation: myani2 1s;
     display: none;
 
@@ -200,6 +200,7 @@ html{
         text-decoration: none;
         transition: 0.5s;
         font-size: 20px;
+        // margin-left: 35px ;
         font-family: 'Lato', sans-serif;
     }
 
@@ -216,7 +217,7 @@ html{
     }
     .fa-facebook{
         font-size: 25px;
-        margin-left: 80px;
+        margin-left: 50px;
         bottom: 15%;
         position: absolute;
     }
@@ -231,7 +232,6 @@ html{
         margin-left: 45px;
     }
 }
-
 .modalNav{
     position: fixed;
     top: 0;
@@ -243,11 +243,93 @@ html{
     display: none;
 }
 
+.parentTextHome{
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    color: white;
+    padding-top: 20%;
+    font-family: 'Lato', sans-serif;
+    animation: myani3 1s;
+
+    @keyframes myani3{
+        from{
+            opacity: 0;
+            transform: translateY(50px);
+        }
+        to{
+
+        }
+    }
+
+    h1{
+        font-size: 100px;
+    }
+
+    button{
+        background-color: white;
+        border: none;
+        border-radius: 5px;
+        height: 60px;
+        width: 150px;
+        transition: 0.5s;
+    }
+
+}
 
 
+// ABOUT
 
+.parentAbout{
+    background-color: rgba(10,11,15,.9);
+    height: 500px;
+    margin: 0 auto;
+    margin-top: 150px;
+    width: 70%;
+    // display: flex;
+    font-family: 'Lato', sans-serif;
+    color: white;
 
+  
+}
 
+.parentAbout2{
+   display: flex;
 
+    img{
+        height:400px;
+        margin-left: 30px;
+        margin-top: 50px;
+    }
 
+    h2{
+        margin-top: 50px;
+        margin-left: 30px;
+    }
+    .h4-a{
+        color: gainsboro;
+        margin-left: 30px;
+    }
+    h5{
+        margin-left: 30px;
+        margin-top: 30px;
+    }
 
+    p{
+        margin-left: 30px;
+        margin-top: 10px;
+    }
+    .h5-b{
+        margin-top: 180px;
+    }
+}
+
+.parentAbout3{
+    display: flex;
+    text-align: end;
+}
+.positionAbout{
+    position: absolute;
+    left: 63%;
+    top: 105%;
+}
