--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ html {
   width: 100%;
   height: 54px;
   position: fixed;
-  z-index: 100;
+  z-index: 9999;
 }
 .parent button {
   background-color: #6f9a37;
@@ -370,4 +370,121 @@ html {
   position: absolute;
   left: 63%;
   top: 105%;
+}
+
+.aboutClass {
+  display: none;
+  -webkit-animation: myani4 1s;
+          animation: myani4 1s;
+}
+@-webkit-keyframes myani4 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes myani4 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.galleryBigParent {
+  background-color: rgba(10, 11, 15, 0.9);
+  width: 70%;
+  height: 100%;
+  padding-bottom: 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
+  font-family: "Lato", sans-serif;
+  margin-top: 100px;
+}
+.galleryBigParent h2 {
+  padding-top: 20px;
+  margin-top: 30px;
+  color: white;
+}
+.galleryBigParent .h22 {
+  margin-top: 10px;
+  color: gainsboro;
+}
+.galleryBigParent p {
+  display: inline-block;
+}
+
+.galleryParent2 {
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+.galleryParent2 img {
+  width: 30%;
+  margin-top: 30px;
+  border-radius: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.galleryParent2 img:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+.galleryParent3 {
+  text-align: start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.galleryParent3 img {
+  width: 30%;
+  border-radius: 5px;
+  margin-top: 30px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.galleryParent3 img:hover {
+  -webkit-transform: scale(0.8);
+          transform: scale(0.8);
+}
+
+.carousel-inner {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.modals {
+  position: fixed;
+  position: absolute;
+  color: red;
+  bottom: 82%;
+  left: 19%;
+}
+.modals img {
+  position: fixed;
 }
