--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ html{
     width: 100%;
     height: 54px;
     position: fixed;
-    z-index: 100;
+    z-index: 9999;
    
 
     button{
@@ -333,3 +333,111 @@ html{
     left: 63%;
     top: 105%;
 }
+
+.aboutClass{
+    display: none;
+    animation: myani4 1s;
+
+    @keyframes myani4{
+        from{
+            opacity: 0;
+        }
+        to{
+            opacity: 1;
+        }
+    }
+}
+
+
+
+// PORTFOLIO
+
+
+// About
+
+.galleryBigParent{
+    background-color: rgba(10,11,15,.9);
+    width: 70%;
+    height: 100%;
+    padding-bottom: 50px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    font-family: 'Lato', sans-serif;
+    margin-top: 100px;
+    
+    
+    h2{
+        padding-top: 20px;
+        margin-top: 30px;
+        color: white;
+    }
+    .h22{
+        margin-top: 10px;
+        color: gainsboro;
+    }
+    p{
+        display: inline-block;
+    }
+}
+
+.galleryParent2{
+    color: white;
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    img{
+        width: 30%;
+        margin-top: 30px;
+        border-radius: 5px;
+        transition: 0.5s;
+        cursor: pointer;
+
+        &:hover{
+            transform: scale(0.8);
+        }
+    }
+    
+}
+
+.galleryParent3{
+    text-align: start;
+    justify-content: space-around;
+    color: white;
+    display: flex;
+    img{
+        width: 30%;
+        border-radius: 5px;
+        margin-top: 30px;
+        transition: 0.5s;
+        cursor: pointer;
+
+        &:hover{
+            transform: scale(0.8);
+        }
+    }
+}
+.carousel-inner{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+}
+
+
+.modals{
+    position: fixed;
+    position: absolute;
+    color: red;
+    bottom: 82%;
+    left: 19%;
+
+    img{
+        position: fixed;
+    }
+
+}
+
+
+
