--- a/Lite Page/styleLite.css
+++ b/Lite Page/styleLite.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url(img/bg1.jpg);
+  background-image: url(LiteIMG/bgLITE1.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -18,35 +18,49 @@ body {
 
 @-webkit-keyframes myani {
   0% {
-    background-image: url(img/bg1.jpg);
+    background-image: url(LiteIMG/bgLITE1.jpg);
   }
   25% {
-    background-image: url(img/bg2.jpg);
+    background-image: url(LiteIMG/bgLITE2.jpg);
   }
   50% {
-    background-image: url(img/bg3.jpg);
+    background-image: url(LiteIMG/bgLITE3.jpg);
   }
   100% {
-    background-image: url(img/bg4.jpg);
+    background-image: url(LiteIMG/bgLITE4.jpg);
   }
 }
 
 @keyframes myani {
   0% {
-    background-image: url(img/bg1.jpg);
+    background-image: url(LiteIMG/bgLITE1.jpg);
   }
   25% {
-    background-image: url(img/bg2.jpg);
+    background-image: url(LiteIMG/bgLITE2.jpg);
   }
   50% {
-    background-image: url(img/bg3.jpg);
+    background-image: url(LiteIMG/bgLITE3.jpg);
   }
   100% {
-    background-image: url(img/bg4.jpg);
+    background-image: url(LiteIMG/bgLITE4.jpg);
   }
 }
 html {
   scroll-behavior: smooth;
+}
+
+.fa-moon {
+  color: white;
+  position: absolute;
+  left: 50%;
+  top: 20%;
+  font-size: 25px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.fa-moon:hover {
+  -webkit-transform: rotate(30deg);
+          transform: rotate(30deg);
 }
 
 .parent {
@@ -108,7 +122,7 @@ html {
   height: 40px;
 }
 .parent2 a {
-  color: white;
+  color: #292d36;
   text-decoration: none;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -116,7 +130,7 @@ html {
   font-family: "Lato", sans-serif;
 }
 .parent2 a:hover {
-  color: #34e3c9;
+  color: #32abff;
 }
 .parent2 li {
   list-style: none;
@@ -127,8 +141,8 @@ html {
 .fa-facebook {
   font-size: 25px;
   margin-left: 10px;
-  background-color: black;
-  color: rgb(255, 255, 255);
+  background-color: rgb(255, 255, 255);
+  color: #292d36;
   border-radius: 50%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -138,7 +152,7 @@ html {
   font-size: 25px;
   margin-left: 10px;
   background-color: transparent;
-  color: rgb(255, 255, 255);
+  color: #292d36;
   border-radius: 50%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -148,7 +162,7 @@ html {
   font-size: 25px;
   margin-left: 10px;
   background-color: transparent;
-  color: rgb(255, 255, 255);
+  color: #292d36;
   border-radius: 50%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -158,7 +172,7 @@ html {
   font-size: 25px;
   margin-left: 10px;
   background-color: transparent;
-  color: rgb(255, 255, 255);
+  color: #292d36;
   border-radius: 50%;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -168,16 +182,6 @@ html {
 .fa-layer-group:hover {
   color: #34e3c9;
   cursor: pointer;
-}
-
-.fa-sun {
-  color: white;
-  position: absolute;
-  left: 50%;
-  top: 20%;
-  font-size: 25px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
 }
 
 .fa-sun:hover {
@@ -201,7 +205,7 @@ html {
 .modalNavV {
   position: absolute;
   position: fixed;
-  background-color: #0a0b0f;
+  background-color: #ffffff;
   width: 400px;
   z-index: 99;
   height: 100%;
@@ -232,11 +236,11 @@ html {
   top: 10%;
   font-size: 25px;
   left: 90%;
-  color: white;
+  color: #292d36;
   cursor: pointer;
 }
 .modalNavV a {
-  color: white;
+  color: #292d36;
   text-decoration: none;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -288,7 +292,7 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: white;
+  color: #292d36;
   padding-top: 20%;
   font-family: "Lato", sans-serif;
   -webkit-animation: myani3 1s;
@@ -312,7 +316,9 @@ html {
   font-size: 100px;
 }
 .parentTextHome button {
-  background-color: white;
+  background-color: #292d36;
+  border-color: #292d36;
+  color: white;
   border: none;
   border-radius: 5px;
   height: 60px;
@@ -322,13 +328,13 @@ html {
 }
 
 .parentAbout {
-  background-color: rgba(10, 11, 15, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   height: 500px;
   margin: 0 auto;
   margin-top: 360px;
   width: 70%;
   font-family: "Lato", sans-serif;
-  color: white;
+  color: #292d36;
 }
 
 .parentAbout2 {
@@ -346,7 +352,7 @@ html {
   margin-left: 30px;
 }
 .parentAbout2 .h4-a {
-  color: gainsboro;
+  color: rgba(41, 45, 54, 0.7019607843);
   margin-left: 30px;
 }
 .parentAbout2 h5 {
@@ -401,7 +407,7 @@ html {
 }
 
 .galleryBigParent {
-  background-color: rgba(10, 11, 15, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   width: 70%;
   height: 100%;
   padding-bottom: 50px;
@@ -419,11 +425,11 @@ html {
 .galleryBigParent h2 {
   padding-top: 20px;
   margin-top: 30px;
-  color: white;
+  color: #292d36;
 }
 .galleryBigParent .h22 {
   margin-top: 10px;
-  color: gainsboro;
+  color: rgba(41, 45, 54, 0.7019607843);
 }
 .galleryBigParent p {
   display: inline-block;
@@ -484,19 +490,8 @@ html {
   margin: 0 auto;
 }
 
-.modals {
-  position: fixed;
-  position: absolute;
-  color: red;
-  bottom: 82%;
-  left: 19%;
-}
-.modals img {
-  position: fixed;
-}
-
 .servicesParent {
-  background-color: rgba(10, 11, 15, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   width: 70%;
   height: 100%;
   margin: 0 auto;
@@ -505,10 +500,10 @@ html {
   font-family: "Lato", sans-serif;
 }
 .servicesParent h2 {
-  color: white;
+  color: #292d36;
 }
 .servicesParent p {
-  color: gainsboro;
+  color: rgba(41, 45, 54, 0.7019607843);
   font-size: 25px;
 }
 .servicesParent .serviceSmallDiv {
@@ -517,15 +512,15 @@ html {
 }
 .servicesParent .fa-camera {
   font-size: 25px;
-  color: white;
+  color: #292d36;
 }
 .servicesParent .fa-pencil {
   font-size: 25px;
-  color: white;
+  color: #292d36;
 }
 .servicesParent .fa-film {
   font-size: 25px;
-  color: white;
+  color: #292d36;
 }
 .servicesParent .serviceSmallDiv2 {
   display: -webkit-box;
@@ -549,7 +544,7 @@ html {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  background-image: url(img/s1.jpg);
+  background-image: url(LiteIMG/s1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: absolute;
@@ -586,7 +581,7 @@ input::placeholder {
 }
 
 .contactParent {
-  background-color: rgba(10, 11, 15, 0.9);
+  background-color: rgb(255, 255, 255);
   width: 70%;
   height: 100%;
   padding-bottom: 50px;
@@ -595,12 +590,12 @@ input::placeholder {
   font-family: "Lato", sans-serif;
 }
 .contactParent h2 {
-  color: white;
+  color: #292d36;
   margin-left: 50px;
   padding-top: 30px;
 }
 .contactParent p {
-  color: gainsboro;
+  color: rgba(41, 45, 54, 0.7019607843);
   font-size: 25px;
   margin-left: 50px;
 }
@@ -612,14 +607,14 @@ input::placeholder {
 .contactParent .contacSmallParent input {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid gainsboro;
+  border-bottom: 1px solid #292d36;
   width: 30%;
   height: 50px;
   font-size: 20px;
   padding-bottom: 10px;
   margin-top: 30px;
   margin-left: 50px;
-  color: white;
+  color: #292d36;
   padding-left: 10px;
   padding-top: 10px;
   margin-top: 10px;
@@ -627,30 +622,30 @@ input::placeholder {
 .contactParent .contacSmallParent .messageInput {
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid gainsboro;
+  border-bottom: 1px solid #262626;
   width: 65%;
   height: 100px;
   font-size: 20px;
   padding-bottom: 10px;
   margin-top: 30px;
   margin-left: 50px;
-  color: white;
+  color: #292d36;
   padding-left: 10px;
   padding-top: 10px;
   margin-top: 10px;
 }
 .contactParent .contacSmallParent .fa-location-dot {
-  color: white;
+  color: #292d36;
   font-size: 25px;
   margin-left: 15%;
 }
 .contactParent .contacSmallParent .fa-mobile {
-  color: white;
+  color: #292d36;
   font-size: 25px;
   margin-left: 25%;
 }
 .contactParent .contacSmallParent .fa-telegram {
-  color: white;
+  color: #262626;
   font-size: 25px;
   margin-left: 25%;
 }
@@ -680,7 +675,9 @@ input::placeholder {
   margin-left: 10px;
 }
 .contactParent .contactSmallParent2 button {
-  background-color: white;
+  background-color: #292d36;
+  border-color: #292d36;
+  color: white;
   border: none;
   border-radius: 5px;
   height: 60px;
@@ -710,7 +707,9 @@ input::placeholder {
           filter: grayscale(80%);
 }
 .contactInstagram button {
-  background-color: white;
+  background-color: #292d36;
+  border-color: #292d36;
+  color: white;
   border: none;
   border-radius: 5px;
   height: 60px;
