--- a/style.scss
+++ b/style.scss
@@ -260,6 +260,7 @@ html{
     align-items: center;
     color: white;
     padding-top: 20%;
+    height: 1500px;
     font-family: 'Lato', sans-serif;
     animation: myani3 1s;
 
